Modificações: 1) adicionei classe dev-for para utilizar no lugar da tag footer no index; 2) adicionei as configurações para a classe dev-for

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,11 +43,6 @@ li {
 }
 
 
-footer {
-  text-align: center;
-  padding-top: 10%;
-}
-
 /** --- classes gerais ---**/
 
 .cabecalhoLogo {
@@ -75,6 +70,14 @@ footer {
     list-style: none; 
     padding: 0 3% 0 3%;
     display: inline;
+}
+
+.dev-for {
+  max-width: 100%;
+  text-align: center;
+  font-size: 0.6em;
+  padding-top: 20%;
+
 }
 
 
