Mudificação: Adicionei um efeito hover nos textos dos menus com uma cor provisória violeta

--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,11 @@ li {
     font-size: 22px;
   }
 
+  /* efeito hover na lista, através do atributo link*/
+  ul a:hover {
+    color: blueviolet;
+  }
+
   .textDestaque {
     font-size: 30px;
   }
