--- a/css/styles.css
+++ b/css/styles.css
@@ -218,19 +218,36 @@ li {
 /** ------------- Desktops ------------- **/
 
 @media only screen and (min-width: 992px) {
-  .logo {
-    width: 40%;
+ 
+  .cabecalhoLogo {
+    text-align: center;
+    padding-bottom: 3%;
+    
+    
   }
 
-  .logo, h1 {
+  .logo {
+    width: 30%;
     display: inline-block;
     padding-left: 1%;
     padding-right: 1%;
     vertical-align: middle;
+    
+    
+  }
+
+  .menu {
+    width: 30%;
+    display: inline-block;
+    vertical-align: bottom;
+    
   }
 
   .listmenu {
     font-size: 22px;
+    padding-left: 5%;
+    padding-right: 5%;
+    display: inline-block;
   }
 
   /* efeito hover na lista, através do atributo link*/
@@ -298,14 +315,23 @@ li {
 
 /** Página Sobre **/
 
+.divSobre h1 {
+  padding-left: 2%;
+}
+
 .fotoperfilrenata {
-  width: 35%;
+  width: 30%;
   padding: 2%;
   float: left;
 }
 
 .ulFormacaoRenata {
-  padding-left: 40%;
+  padding-left: 20%;
+}
+
+.texSobre {
+  padding-top: 3%;
+  border: 2px solid green;
 }
 
 
